--- a/QuanLyNhanSu/QuanLyNhanSu/Web.config
+++ b/QuanLyNhanSu/QuanLyNhanSu/Web.config
@@ -5,6 +5,8 @@
   -->
 <configuration>
 	<connectionStrings>
+		<!--<add name="PMSConnection" connectionString="Data Source=localhost;Initial Catalog=PMSDB;User ID=sa;Password=123; Integrated Security=false"/>
+-->
 		<add name="DBConnect" connectionString ="Data Source=.\SQLEXPRESS; Initial Catalog=QLnhansu;UID=sa; PWD=123456"/>
 	</connectionStrings>
   <appSettings>
